--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#devis">le devis</a></li>
         <li><a href="#commande">la passation de commande</a></li>
       </ul> 
-      <p>Pour plus d'informations sur les paramètres, la description des classes, veuillez-vous référer à <a href="documentation">la documentation de la librairie</a>, <a href="parametres.html">les paramètres de la librairie</a> <!--et <a href="#" target="_blank">de l'API</a>-->.</p>
+      <p>Pour plus d'informations sur les paramètres, la description des classes, les modifications récéntes, veuillez-vous référer à <a href="documentation">la documentation de la librairie</a>, <a href="parametres.html">les paramètres de la librairie</a>, <a href="changelog.html">le changelog</a> <!--et <a href="#" target="_blank">de l'API</a>-->.</p>
       <p><b>Prérequis et informations générales à propos de l'utilisation de l'API EnvoiMoinsCher.</b></p>
       <p>Avant de pouvoir utiliser l'API EnvoiMoinsCher, il vous faudra suivre les étapes suivantes :
       <ul>
