--- a/changelog.html
+++ b/changelog.html
@@ -55,10 +55,12 @@
             <td>ajout des fonctionnalités</td>
             <td>- la librairie gère désormais le choix du point relais en différé (vous laissez le choix du points relais de livraison au destinataire)
               <br /><br />- la libraire gère les envois des multi-colis (plusieurs lignes); vous pouvez donc envoyer 1 colis de 3kg (dimensions 10cm/10cm/10cm) avec un autre colis de 10kg (dimensions 20cm/20cm/20cm)
+              <br /><br />- la librairie permet d'indiquer un paramètre de suivi (url_tracking) <a href="suivi.html">en savoir plus</a>
             </td>
           </tr>
         </tbody>
-      </table><br />
+      </table>
+      <br />
     </div>
   </body>
 </html>
