mise a jour des parametres + modifs dans la doc

--- a/documentation/Env/Env_Quotation.html
+++ b/documentation/Env/Env_Quotation.html
@@ -482,7 +482,7 @@ pouvez pas indiquer la longueur et la largeur. A la place,
 				<span class="var-name">$type</span><span class="var-description">: Le type de l'envoi : pli, colis, encombrant ou palette.</span>			</li>
 					<li>
 				<span class="var-type">array</span>
-				<span class="var-name">$data</span><span class="var-description">: Le tableau avec les informations sur votre envoi (poids, largeur, longueur, hauteur)</span>			</li>
+				<span class="var-name">$data</span><span class="var-description">: Le tableau multidimensionnel avec les informations sur votre envoi (poids, largeur, longueur, hauteur)</span>			</li>
 				</ul>
 		
 			
