lib envoi en 2 sens

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         ?>
       </code>
       <p>Dans cet exemple, on passera une commande auprès de  l'opérateur UPS à condition qu'elle soit inférieure à 50 euros TTC (paramètre "prix_max_ttc").</p>
-      <p>Regardez aussi les exemples : <a href="samples/get_order.php">la commande Paris - Marseille</a>, <a href="samples/get_order_australia.php">la commande Paris - Sydney</a>, <a href="samples/get_order_insurance.php">la commande Paris - Marseille avec l'assurance</a>.</p>
+      <p>Regardez aussi les exemples : <a href="samples/get_order.php">la commande Paris - Marseille</a>, <a href="samples/get_order_australia.php">la commande Paris - Sydney</a>, <a href="samples/get_order_insurance.php">la commande Paris - Marseille avec l'assurance</a>,
+      <a href="samples/get_order_double.php">la commande Paris - Marseille dans les 2 directions</a>.</p>
       <p><b>La fonction d'autoload.</b></p>
       <p>Si vous utilisez un framework ou un système de gestion de contenu, vous pouvez rencontrer des problèmes avec l'inclusion automatique 
       des classes de la librairie, comme c'est fait dans les fichiers d'exemple. Dans ce cas-là, vous pouvez être amené à inclure les classes manuellement 
