modif numero de version

--- a/changelog.html
+++ b/changelog.html
@@ -16,7 +16,7 @@
     <div id="CONTAINER">
       <h1>Changelog / Librairie PHP pour l'API EnvoiMoinsCher</h1>
       <p>Voici les dernières modifications effectuées dans la librairie : </p> 
-      <p><b>Version 1.0.1 rc</b></p> 
+      <p><b>Version 1.0.1 rc1</b></p> 
       <table>
         <thead><tr><td>Fichier</td><td>Modification</td><td>Description</td></tr></thead>
         <tbody>
