--- a/suivi.html
+++ b/suivi.html
@@ -16,7 +16,7 @@
     <div id="CONTAINER">
       <h1>Suivi / Librairie PHP pour l'API EnvoiMoinsCher</h1>
       <p>Voici les dernières modifications effectuées dans la librairie : </p> 
-      <p><b>Version 1.0.1 rc1</b></p>
+      <p><b>Version 1.0.1 rc</b></p>
       <p>Le suivi est intégré dans cette version grâce au paramètre "url_tracking". Il signifie la page 
       qui recevra les informations envoyées par EnvoiMoinsCher.com. </p>
       <p>Le fonctionnement du processus est le suivant : 
