--- a/documentation/Env/Env_Quotation.html
+++ b/documentation/Env/Env_Quotation.html
@@ -97,7 +97,7 @@
 																<div class="method-definition">
 											<span class="method-result">true</span>
 										<a href="#getQuotation" title="details" class="method-name">getQuotation</a>
-											(<span class="var-type"></span>&nbsp;<span class="var-name">$quotInfo</span>, <span class="var-type">array</span>&nbsp;<span class="var-name">$data</span>)
+											(<span class="var-type"></span>&nbsp;<span class="var-name">$quotInfo</span>)
 									</div>
 																<div class="method-definition">
 											<span class="method-result">boolean</span>
@@ -118,7 +118,32 @@
 											<span class="method-result">void</span>
 										<a href="#setType" title="details" class="method-name">setType</a>
 											(<span class="var-type">string</span>&nbsp;<span class="var-name">$type</span>, <span class="var-type">array</span>&nbsp;<span class="var-name">$data</span>)
-									</div>
+									</div>  
+<div class="method-definition">
+  <span class="method-result">array</span>
+  <a href="#getReasons" title="details" class="method-name">getReasons</a>
+  (<span class="var-type">array</span>&nbsp;<span class="var-name">$translations</span>)
+</div>
+<div class="method-definition">
+  <span class="method-result">boolean</span>
+  <a href="#makeDoubleOrder" title="details" class="method-name">makeDoubleOrder</a>
+  (<span class="var-type">array</span>&nbsp;<span class="var-name">$quotInfo</span>, <span class="var-type">boolean</span>&nbsp;<span class="var-name">$getInfo</span>)
+</div>
+<div class="method-definition">
+  <span class="method-result">void</span>
+  <a href="#switchPeople" title="details" class="method-name">switchPeople</a>
+  ()
+</div>
+<div class="method-definition">
+  <span class="method-result">void</span>
+  <a href="#setNewQuotInfo" title="details" class="method-name">setNewQuotInfo</a>
+  (<span class="var-type">string</span>&nbsp;<span class="var-name">$quotInfo</span> )
+</div>
+<div class="method-definition">
+  <span class="method-result">void</span>
+  <a href="#unsetParams" title="details" class="method-name">unsetParams</a>
+  (<span class="var-type">array</span>&nbsp;<span class="var-name">$quotInfo</span> )
+</div>  		
 								</div>
 		</div>
 	</div>		
@@ -330,16 +355,12 @@ $quotInfo = array(&quot;collecte_date&quot; =&gt; &quot;2015-04-29&quot;, &quot;
 		<span class="method-name">
 			getQuotation
 		</span>
-					(<span class="var-type"></span>&nbsp;<span class="var-name">$quotInfo</span>, <span class="var-type">array</span>&nbsp;<span class="var-name">$data</span>)
+					(<span class="var-type"></span>&nbsp;<span class="var-name">$quotInfo</span> )
 			</div>
 	
 			<ul class="parameters">
-					<li>
-				<span class="var-type">array</span>
-				<span class="var-name">$data</span><span class="var-description">: Tableau qui contient les informations sur la cotation (date, type, délai, valeur d'assurance).</span>			</li>
-					<li>
-				<span class="var-type"></span>
-				<span class="var-name">$quotInfo</span>			</li>
+					<li> 
+				<span class="var-name">$quotInfo</span><span class="var-description">: Tableau qui contient les informations sur la cotation (date, type, délai, valeur d'assurance).</span>			</li>
 				</ul>
 		
 			
@@ -408,7 +429,7 @@ La commande a été correctement réalisée si la référence correspond à ce m
 			<ul class="parameters">
 					<li>
 				<span class="var-type">string</span>
-				<span class="var-name">$type</span><span class="var-description">: Type de la personne (shipper or recipient).</span>			</li>
+				<span class="var-name">$type</span><span class="var-description">: Type de la personne (expediteur ou destinataire).</span>			</li>
 					<li>
 				<span class="var-type">array</span>
 				<span class="var-name">$data</span><span class="var-description">: Tableau avec les informations sur l'expéditeur ou le destinataire.</span>			</li>
@@ -486,7 +507,110 @@ pouvez pas indiquer la longueur et la largeur. A la place,
 				</ul>
 		
 			
-	</div>
+	</div> 
+<a name="methodgetReasons" id="getReasons"><!-- --></a>
+<div class="oddrow">
+  <div class="method-header"><span class="method-title">getReasons</span></div>
+  <!-- ========== Info from phpDoc block ========= -->
+  <p class="description"></p>
+  <ul class="tags">
+    <li><span class="field">access:</span> public</li>
+  </ul>
+  <div class="method-signature">
+    <span class="method-result">void</span>
+    <span class="method-name">getReasons</span>(<span class="var-type">array</span>&nbsp;<span class="var-name">$translations</span>)
+  </div>
+  <ul class="parameters">
+    <li><span class="var-type">array</span>
+      <span class="var-name">$translations</span><span class="var-description">: Tableau avec les traductions.</span>
+    </li>
+  </ul>
+</div>
+<a name="methodmakeDoubleOrder" id="makeDoubleOrder"><!-- --></a>
+<div class="evenrow">
+  <div class="method-header"><span class="method-title">makeDoubleOrder</span></div> 
+  <!-- ========== Info from phpDoc block ========= -->
+  <p class="description">La méthode permet d'effectuer une double requête, un peu comme l'achat d'un billet pour le trajet aller-retour.</p>
+  <ul class="tags">
+    <li><span class="field">access:</span> public</li>
+  </ul>
+  <div class="method-signature">
+    <span class="method-result">void</span>
+    <span class="method-name">makeDoubleOrder</span>
+    (<span class="var-type">array </span>&nbsp;<span class="var-name">$quotInfo</span>, <span class="var-type">boolean</span>&nbsp;<span class="var-name">$getInfo</span>)
+  </div>
+  <ul class="parameters">
+    <li>
+      <span class="var-type">array</span>
+      <span class="var-name">$quotInfo</span><span class="var-description">: Les informations sur la cotation.</span>
+    </li>
+    <li>
+      <span class="var-type">boolean</span>      
+      <span class="var-name">$getInfo</span><span class="var-description">: Le booléan qui indique s'il faut parser la réponse et préparer le tableau avec toutes les informations sur la commande passée</span>
+    </li>
+  </ul>	
+</div>
+
+<a name="methodswitchPeople" id="switchPeople"><!-- --></a>
+<div class="oddrow">
+  <div class="method-header"><span class="method-title">switchPeople</span></div> 
+  <!-- ========== Info from phpDoc block ========= -->
+  <p class="description">La méthode permet d'échanger l'expéditeur et le destinataire de l'expédition.</p>
+  <ul class="tags">
+    <li><span class="field">access:</span> private</li>
+  </ul>
+  <div class="method-signature">
+    <span class="method-result">void</span>
+    <span class="method-name">switchPeople</span>()
+  </div>
+</div>
+
+<a name="methodsetNewQuotInfo" id="setNewQuotInfo"><!-- --></a>
+<div class="evenrow"> 
+  <div class="method-header">
+    <span class="method-title">setNewQuotInfo</span>
+  </div>
+  <!-- ========== Info from phpDoc block ========= -->
+  <p class="description"></p>
+  <ul class="tags">
+    <li><span class="field">access:</span> private</li>
+  </ul>
+  <div class="method-signature">
+    <span class="method-result">array</span>
+    <span class="method-name">quotInfo</span>
+    (<span class="var-type">array</span>&nbsp;<span class="var-name">$quotInfo</span>)
+  </div>
+  <ul class="parameters">
+    <li>
+      <span class="var-type">array</span>
+      <span class="var-name">$quotInfo</span><span class="var-description">: Les informations sur la cotation.</span>
+    </li>
+  </ul> 
+</div>
+
+<a name="methodunsetParams" id="unsetParams"><!-- --></a>
+<div class="oddrow">
+  <div class="method-header">
+    <span class="method-title">unsetParams</span>
+  </div>
+  <!-- ========== Info from phpDoc block ========= -->
+  <p class="description"></p>
+  <ul class="tags">
+    <li><span class="field">access:</span> public</li>
+  </ul>
+  <div class="method-signature">
+    <span class="method-result">void</span>
+    <span class="method-name">unsetParams</span>
+    (<span class="var-type">array</span>&nbsp;<span class="var-name">$quotInfo</span>)
+  </div>
+  <ul class="parameters">
+    <li>
+      <span class="var-type">array</span>
+      <span class="var-name">$quotInfo</span><span class="var-description">: Les informations à supprimer.</span>
+    </li>
+  </ul> 
+</div>
+   
 							<h4>Inherited Methods</h4>
 				<a name='inherited_methods'><!-- --></a>	
 									<!-- =========== Summary =========== -->
