correction d'erreurs mineures sur Quotation.php

--- a/changelog.html
+++ b/changelog.html
@@ -16,6 +16,22 @@
     <div id="CONTAINER">
       <h1>Changelog / Librairie PHP pour l'API EnvoiMoinsCher</h1>
       <p>Voici les dernières modifications effectuées dans la librairie : </p>
+      <p><b>Version 1.0.1-rc5</b></p>
+      <table>
+        <thead><tr><td>Fichier</td><td>Modification</td><td>Description</td></tr></thead>
+        <tbody>
+          <tr>
+            <td>env/Quotation.php</td>
+            <td>Verification proforma</td>
+            <td>setProforma() ignore les descriptions avec une quantité incorrecte.</td>
+          </tr>
+          <tr>
+            <td>env/Quotation.php</td>
+            <td>Récupération assurance</td>
+            <td>Correction d'un problème lors de la récupération du coût de l'assurance.</td>
+          </tr>
+        </tbody>
+      </table>
       <p><b>Version 1.0.1-rc4</b></p>
       <table>
         <thead><tr><td>Fichier</td><td>Modification</td><td>Description</td></tr></thead>
