mise a jour parametres + test unitaire

--- a/parametres.html
+++ b/parametres.html
@@ -80,7 +80,12 @@
             <td>Valeur déclarée du contenu</td>
             <td><em>objet</em>.valeur</td>
             <td>La valeur du contenu de l'envoi. <em>Objet</em> veut dire le type d'envoi (colis, palette, encombrant, pli) (float).</td>
-          </tr>   
+          </tr> 
+					<tr>
+						<td>Type d'emballage</td>
+						<td>type_emballage</td>
+						<td>Le type d'emballage de l'envoi nécessaire pour l'offre Colissimo. Il faut passer le paramètre "type_emballage.emballage", les options possible étant données par une cotation.</td>
+					</tr>
         </tbody>
       </table>
       <p><b>Les paramètres expéditeur/destinataire</b></p>
