ajout de la requete CarriersList sur la librairie et ajout des parametres tracking pour la librairie 1.1.3

--- a/changelog.html
+++ b/changelog.html
@@ -17,21 +17,21 @@
       <h1>Changelog / Librairie PHP pour l'API EnvoiMoinsCher</h1>
       <p><b>Version 1.1.1-rc1</b></p>
       <p>Voici les dernières modifications effectuées dans la librairie : </p>
-      <table>
-        <thead><tr><td>Fichier</td><td>Modification</td><td>Description</td></tr></thead>
-        <tbody>
-          <tr>
-            <td>env/Quotation.php</td>
-            <td>Verification proforma</td>
-            <td>setProforma() ignore les descriptions avec une quantité incorrecte.</td>
-          </tr>
-          <tr>
-            <td>env/Quotation.php</td>
-            <td>Récupération assurance</td>
-            <td>Correction d'un problème lors de la récupération du coût de l'assurance.</td>
-          </tr>
-        </tbody>
-      </table>
+			<table>
+				<thead><tr><td>Fichier impacté</td><td>Modification</td><td>Description</td></tr></thead>
+				<tbody>
+					<tr>
+						<td>env/WebService.php</td>
+						<td>Mise à jour cotation</td>
+						<td>Mise à jour des requêtes de quotations</td>
+					</tr>
+					<tr>
+						<td>env/CarriersList.php</td>
+						<td>Requête de récupération des services</td>
+						<td>Ajout d'une requête de récupération des services pour les modules</td>
+					</tr>
+				</tbody>
+			</table>
       <br />
     </div>
   </body>
