--- a/documentation/classes/Env_ListPoints.html
+++ b/documentation/classes/Env_ListPoints.html
@@ -756,10 +756,13 @@ $listPoints[x]  => array(<br>
 Example : <br>
 array(<br>
 &nbsp;&nbsp;"srv_code" => "RelaisColis", <br>
+&nbsp;&nbsp;"collecte" => "exp", <br>
 &nbsp;&nbsp;"pays" => "FR", <br>
 &nbsp;&nbsp;"cp" => "75011", <br>
 &nbsp;&nbsp;"ville" => "PARIS"<br>
-)</p>
+)
+<br/> nb : collecte -> exp/dest,	pays -> country iso code
+</p>
 </td>
                             </tr>
                                             </table>
